# Inconsolata

./: .gitignore  AUTHORS.txt  CONTRIBUTORS.txt  FONTLOG.txt  Inconsolata-final-request.txt  METADATA.pb  README.md  requirements.txt
charset/: inconsolata_unique.nam
documentation/: inconsolata-diagonals.ai  inconsolata-test.txt
glyphstool/: Cargo.toml  README.md
glyphstool/plist_derive/: Cargo.toml
glyphstool/plist_derive/src/: lib.rs
glyphstool/src/: font.rs  from_plist.rs  inco_fix.rs  lib.rs  main.rs  ops.rs  plist.rs  region.rs  stretch.rs  to_plist.rs
sources/: Inconsolata (Autosaved).glyphs  Inconsolata-alexei.glyphs  Inconsolata-noslash.glyphs  Inconsolata-vf.glyphs  Inconsolata.glyphs  build.sh  config.yaml  decompose-transformed-components.py  gen_instances.py  gen_stat.py  inco_fix.py  stat.stylespace  vtt_hinting.ttx
sources/charset/: inconsolata_unique.nam
sources/legacy/: Inconsolata-Regular.glyphs
src/: Inconsolata-Bold (Autosaved).glyphs  Inconsolata-Bold-OTF.vfb  Inconsolata-Bold-TTF.vfb  Inconsolata-Bold.glyphs
src/charset/: inconsolata_glyphlist.nam  nigels-list.nam
